--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
-</head>
-
-<body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
-
+  <head>
+    <title>Aotearoa Bird GIFs</title>
+  </head>
+  <body>
+    <h1 id="title">Aotearoa Bird GIFs</h1>
+    <p>Welcome to Aotearoa Bird GIFs, the home of your bird GIF needs</p>
+    <h2 id="license">License</h2>
+    <p><a href="https://creativecommons.org/licenses/by-sa/3.0/nz/">Attribution-ShareAlike 3.0 New Zealand (CC BY-SA 3.0 NZ)</a></p>
+    <h1 id="kākā">Kākā</h1>
+    <p><i>Nestor meridionalis</i></p>
+    <ul>
+      <li><img src="gifs/gif_00001.gif" />
+        <ul>
+          <li>URL: https://www.birdgifs.nz/gifs/gif_00001.gif</li>
+          <li>Photographer: <a href="https://twitter.com/nzkarit">@nzkarit</a></li>
+        </ul>
+      </li>
+    </ul>
+  </body>
 </html>
