--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Aotearoa Bird GIFs</title>
+    <meta charset="UTF-8">
   </head>
   <body>
     <h1 id="title">Aotearoa Bird GIFs</h1>
