--- a/index.html
+++ b/index.html
@@ -9,15 +9,32 @@
     <p>Welcome to Aotearoa Bird GIFs, the home of your bird GIF needs</p>
     <h2 id="license">License</h2>
     <p><a href="https://creativecommons.org/licenses/by-sa/3.0/nz/">Attribution-ShareAlike 3.0 New Zealand (CC BY-SA 3.0 NZ)</a></p>
+    <h2 id="contributions">Contributions</h2>
+    <p>If you would like to add GIFs to this collection there are two ways to do so:
+      <ul>
+        <li>Email the GIF or Video to bird.gif.submissions AT karit DOT NZ</li>
+        <li>To a pull request on the <a href="https://github.com/nzkarit/birdgifs.nz">GitHub repository</a></li>
+      </ul>
+    </p>
+    <h2 id="support">Support</h2>
+    <p>Currently this site is using the free <a href="https://azure.microsoft.com/en-gb/services/app-service/static/">Azure - Static Web Apps Preview</a>, which is currently free. Though at some point in the future it will cost this collection of GIFs. If you would like to help support this site please get in touch</p>
+    <h2 id="contant">Contact</h2>
+    <p>
+      <ul>
+        <li>Twitter: <a href="https://twitter.com/nzbirdgifs">@nzbirdgifs</a></li>
+      </ul>
+    </p>
     <h1 id="kākā">Kākā</h1>
     <p><i>Nestor meridionalis</i></p>
-    <ul>
-      <li><img src="gifs/gif_00001.gif" />
-        <ul>
-          <li>URL: https://www.birdgifs.nz/gifs/gif_00001.gif</li>
-          <li>Photographer: <a href="https://twitter.com/nzkarit">@nzkarit</a></li>
-        </ul>
-      </li>
-    </ul>
+    <p>
+      <ul>
+        <li><img src="gifs/gif_00001.gif" alt="kākā at bird feeder, getting food, then flying away" width="500" height="281"/>
+          <ul>
+            <li>URL: https://www.birdgifs.nz/gifs/gif_00001.gif</li>
+            <li>Photographer: <a href="https://twitter.com/nzkarit">@nzkarit</a></li>
+          </ul>
+        </li>
+      </ul>
+  </p>
   </body>
 </html>
