--- a/index.html
+++ b/index.html
@@ -19,22 +19,28 @@
     <h2 id="support">Support</h2>
     <p>Currently this site is using the free <a href="https://azure.microsoft.com/en-gb/services/app-service/static/">Azure - Static Web Apps Preview</a>, which is currently free. Though at some point in the future it will cost this collection of GIFs. If you would like to help support this site please get in touch</p>
     <h2 id="contant">Contact</h2>
-    <p>
-      <ul>
-        <li>Twitter: <a href="https://twitter.com/nzbirdgifs">@nzbirdgifs</a></li>
-      </ul>
-    </p>
+    <ul>
+      <li>Twitter: <a href="https://twitter.com/nzbirdgifs">@nzbirdgifs</a></li>
+    </ul>
     <h1 id="kākā">Kākā</h1>
     <p><i>Nestor meridionalis</i></p>
-    <p>
-      <ul>
-        <li><img src="gifs/gif_00001.gif" alt="kākā at bird feeder, getting food, then flying away" width="500" height="281"/>
-          <ul>
-            <li>URL: https://www.birdgifs.nz/gifs/gif_00001.gif</li>
-            <li>Photographer: <a href="https://twitter.com/nzkarit">@nzkarit</a></li>
-          </ul>
-        </li>
-      </ul>
-  </p>
+    <ul>
+      <li><img src="gifs/gif_00001.gif" alt="kākā at bird feeder, getting food, then flying away" width="500" height="281"/>
+        <ul>
+          <li>URL: https://www.birdgifs.nz/gifs/gif_00001.gif</li>
+          <li>Photographer: <a href="https://twitter.com/nzkarit">@nzkarit</a></li>
+        </ul>
+      </li>
+    </ul>
+    <h1 id="takahē">Takahē</h1>
+    <p><i>Porphyrio hochstetteri</i></p>
+    <ul>
+      <li><img src="gifs/gif_00002.gif" alt="takahē eating grass" width="500" height="280/>
+        <ul>
+          <li>URL: https://www.birdgifs.nz/gifs/gif_00002.gif</li>
+          <li>Photographer: <a href="https://twitter.com/nzkarit">@nzkarit</a></li>
+        </ul>
+      </li>
+    </ul>
   </body>
 </html>
