--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>If you would like to add GIFs to this collection there are two ways to do so:
       <ul>
         <li>Email the GIF or Video to bird.gif.submissions AT karit DOT NZ</li>
-        <li>To a pull request on the <a href="https://github.com/nzkarit/birdgifs.nz">GitHub repository</a></li>
+        <li>Do a pull request on the <a href="https://github.com/nzkarit/birdgifs.nz">GitHub repository</a></li>
       </ul>
     </p>
     <h2 id="support">Support</h2>
