--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h1 id="takahē">Takahē</h1>
     <p><i>Porphyrio hochstetteri</i></p>
     <ul>
-      <li><img src="gifs/gif_00002.gif" alt="takahē eating grass" width="500" height="280/>
+      <li><img src="gifs/gif_00002.gif" alt="takahē eating grass" width="500" height="280"/>
         <ul>
           <li>URL: https://www.birdgifs.nz/gifs/gif_00002.gif</li>
           <li>Photographer: <a href="https://twitter.com/nzkarit">@nzkarit</a></li>
