--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <h2 id="license">License</h2>
     <p><a href="https://creativecommons.org/licenses/by-sa/3.0/nz/">Attribution-ShareAlike 3.0 New Zealand (CC BY-SA 3.0 NZ)</a></p>
     <h2 id="contributions">Contributions</h2>
-    <p>If you would like to add GIFs to this collection there are two ways to do so:
-      <ul>
-        <li>Email the GIF or Video to bird.gif.submissions AT karit DOT NZ</li>
-        <li>Do a pull request on the <a href="https://github.com/nzkarit/birdgifs.nz">GitHub repository</a></li>
-      </ul>
-    </p>
+    <p>If you would like to add GIFs to this collection there are two ways to do so:</p>
+    <ul>
+      <li>Email the GIF or Video to bird.gif.submissions AT karit DOT NZ</li>
+      <li>Do a pull request on the <a href="https://github.com/nzkarit/birdgifs.nz">GitHub repository</a></li>
+    </ul>
     <h2 id="support">Support</h2>
     <p>Currently this site is using the free <a href="https://azure.microsoft.com/en-gb/services/app-service/static/">Azure - Static Web Apps Preview</a>, which is currently free. Though at some point in the future it will cost this collection of GIFs. If you would like to help support this site please get in touch</p>
     <h2 id="contant">Contact</h2>
