--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul>
     <h2 id="support">Support</h2>
     <p>Currently this site is using the free <a href="https://azure.microsoft.com/en-gb/services/app-service/static/">Azure - Static Web Apps Preview</a>, which is currently free. Though at some point in the future it will cost this collection of GIFs. If you would like to help support this site please get in touch</p>
-    <h2 id="contant">Contact</h2>
+    <h2 id="contact">Contact</h2>
     <ul>
       <li>Twitter: <a href="https://twitter.com/nzbirdgifs">@nzbirdgifs</a></li>
     </ul>
@@ -37,6 +37,16 @@
       <li><img src="gifs/gif_00002.gif" alt="takahē eating grass" width="500" height="280"/>
         <ul>
           <li>URL: https://www.birdgifs.nz/gifs/gif_00002.gif</li>
+          <li>Photographer: <a href="https://twitter.com/nzkarit">@nzkarit</a></li>
+        </ul>
+      </li>
+    </ul>
+    <h1 id="tūī">Tūī</h1>
+    <p><i>Porphyrio hochstetteri</i></p>
+    <ul>
+      <li><img src="gifs/gif_00003.gif" alt="tūī drinking from a sugar water bottle" width="500" height="280"/>
+        <ul>
+          <li>URL: https://www.birdgifs.nz/gifs/gif_00003.gif</li>
           <li>Photographer: <a href="https://twitter.com/nzkarit">@nzkarit</a></li>
         </ul>
       </li>
