Fixing Latin name

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </li>
     </ul>
     <h1 id="tūī">Tūī</h1>
-    <p><i>Porphyrio hochstetteri</i></p>
+    <p><i>Prosthemadera novaeseelandiae</i></p>
     <ul>
       <li><img src="gifs/gif_00003.gif" alt="tūī drinking from a sugar water bottle" width="500" height="280"/>
         <ul>
